--- a/LoginTester/Pages/Register.cshtml
+++ b/LoginTester/Pages/Register.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using Models
 @model LoginTester.Pages.RegisterModel
 @{
 }
@@ -6,50 +7,57 @@
 <div>
     <h3>Register</h3>
 </div>
-<form method="post" style="border:solid 1px">
+
+@using (Html.BeginForm(FormMethod.Post, new { Style = "border:solid 1px" }))
+{
     <div>
         <table>
             <tr>
-                <td><input placeholder="First Name" type="text" asp-for="user.FirstName"/></td>
-                <td><input placeholder="Last Name" type="text" asp-for="user.LastName" /></td>
-                <td><input placeholder="Cpf" type="text" asp-for="user.Cpf" /></td>
-                <td>
-                    <select>
-                        <option value="Male">Male</option>
-                        <option value="Female">Female</option>
-                        <option value="Undefined">Undefined</option>
-                    </select>
-                </td>
-                <td><input placeholder="Birthday" type="date" asp-for="user.Birthday" /></td>
+                <td>@Html.LabelFor(x => x.user.FirstName)</td>
+                <td>@Html.TextBoxFor(x => x.user.FirstName)</td>
             </tr>
-        </table>
-    </div>
-</form>
-<form method="post" style="border:solid 1px">
-    <div>
-        <table>
             <tr>
-                <td><input placeholder="Email" type="email" asp-for="user.Email" /></td>
-                <td><input placeholder="Login" type="text" asp-for="user.Login" /></td>
-                <td><input placeholder="Password" type="password" asp-for="user.Password" /></td>
-                <td><input placeholder="Confirm Password" type="password" /></td>
-            </tr>
-        </table>
-    </div>
-</form>
-<form method="post" style="border:solid 1px">
-    <div>
-        <table>
             <tr>
-                <td><input placeholder="CEP" type="text" asp-for="user.Cep" /></td>
-                <td><input placeholder="Street" type="text" asp-for="user.Street" /></td>
+                <td>@Html.LabelFor(x => x.user.LastName)</td>
+                <td>@Html.TextBoxFor(x => x.user.LastName)</td>
             </tr>
-        </table>
-    </div>
-</form>
-<form method="post" style="border:solid 1px">
-    <div>
-        <table>
+            <tr>
+            <tr>
+                <td>@Html.LabelFor(x => x.user.Cpf)</td>
+                <td>@Html.TextBoxFor(x => x.user.Cpf)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(x => x.user.Gender)</td>
+                <td>@Html.DropDownList("Gender", new SelectList(Enum.GetValues(typeof(Gender))), "Select Gender")</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(x => x.user.Birthday)</td>
+                <td>@Html.TextBoxFor(x => x.user.Birthday)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(x => x.user.Email)</td>
+                <td>@Html.TextBoxFor(x => x.user.Email)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(x => x.user.Login)</td>
+                <td>@Html.TextBoxFor(x => x.user.Login)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(x => x.user.Password)</td>
+                <td>@Html.TextBoxFor(x => x.user.Password)</td>
+            </tr>
+            <tr>
+                <td>@Html.Label("Confirm Password")</td>
+                <td>@Html.TextBoxFor(x => x.user.Password)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(x => x.user.Cep)</td>
+                <td>@Html.TextBoxFor(x => x.user.Cep)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(x => x.user.Street)</td>
+                <td>@Html.TextBoxFor(x => x.user.Street)</td>
+            </tr>
             <tr>
                 <td><input type="submit" value="Cancel" asp-page-handler="Cancel" /></td>
                 <td><input type="submit" value="Clear All" asp-page-handler="ClearAll" /></td>
@@ -57,4 +65,4 @@
             </tr>
         </table>
     </div>
-</form>
+}
