--- a/LoginTester/Pages/Register.cshtml
+++ b/LoginTester/Pages/Register.cshtml
@@ -8,6 +8,32 @@
     <h3>Register</h3>
 </div>
 
+@if (TempData["AlertMessage"] != null && TempData["AlertType"] != null) //change!!!!!
+{
+    @if ((WarningType)TempData["AlertType"] == WarningType.Success)
+    {
+        <div class="alert alert-success">
+            <strong>@TempData["AlertMessage"]</strong>
+        </div>
+    }
+    else if((WarningType)TempData["AlertType"] == WarningType.Info){
+        <div class="alert alert-info">
+            <strong>@TempData["AlertMessage"]</strong>
+        </div>
+    }
+    else if((WarningType)TempData["AlertType"] == WarningType.Warning){
+        <div class="alert alert-warning">
+            <strong>@TempData["AlertMessage"]</strong>
+        </div>
+    }
+    else
+    {
+        <div class="alert alert-danger">
+            <strong>@TempData["AlertMessage"]</strong>
+        </div>
+    }
+}
+
 @using (Html.BeginForm(FormMethod.Post, new { Style = "border:solid 1px" }))
 {
     <script src="~/js/RegisterScript.js"></script>
